styles/main.css
/*****************************************************/
/* This semester we will be using my variation of    */
/* Josh Comeau's CSS Reset instead of normalize      */
/* Read more at                                      */
/* https://www.joshwcomeau.com/css/custom-css-reset/ */
/*****************************************************/
/* Always add your CSS below the reset CSS           */
/*****************************************************/
:root {
  --color-font: #444;
  --color-primary: #bc673e; /* terracota */
  --color-secondary: #798a37; /* moss green */
  --color-accent: #b8c979; /* wild willow */
  --color-accent-light: #aebea2; /* pale sage */
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
  /* this an experimental line-height; if it breaks, add line-height: 1.5 to body */
  line-height: calc(1em + 0.5rem);
}

html,
body {
  height: 100%;
}

body {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
  height: auto;
}

input,
button,
textarea,
select {
  font: inherit;
}

/* until you get a feel for overflow, I'll keep these next two commented out */
/* p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
} */

/* p {
  overflow-wrap: break-word;
  hyphens: auto;
} */

/* temp CSS for HTML only assignments */
picture img {
  width: 100%;
}

svg {
  width: 200px;
}

/* temp fix to size about img */
img[srcset] {
  width: 50%;
  height: auto;
  margin: 2rem auto;
}

/* temporary fix to size svg images */
img[src$="svg"] {
  width: 200px;
}

/************ add your CSS here *****************/
body {
  font-family: "Montserrat", sans-serif;
  color: var(--color-font);
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

h1,
h2,
h3,
h4 {
  color: var(--color-primary);
  font-family: "Barlow Condensed", sans-serif;
  font-weight: 400;
  margin-bottom: 0.5em;
  margin-top: 1.5em;
}

h1 {
  font-size: 3.5rem;
}

h2 {
  font-size: 2.5rem;
}

h3 {
  font-size: 2rem;
}

p {
  margin-bottom: 1.5rem;
}

a {
  text-decoration: none;
  color: var(--color-secondary);
}

a[href]:hover {
  color: var(--color-accent);
}

.button {
  border: 1px solid var(--color-accent-light);
  color: var(--color-accent-light);
  display: inline-block;
  padding: 0.6rem 1rem;
  cursor: pointer;
  transition: background-color 300ms ease-in-out, color 300ms ease-in-out;
}

.button:hover {
  background-color: var(--color-accent);
  color: #fff;
}

a.button:hover {
  color: #fff;
}

main {
  padding: 0 1rem;
  max-width: 70rem;
  align-self: center;
}

footer {
  background-color: var(--color-font);
}

footer p {
  color: #fff;
  margin: 0;
  padding: 3rem 1rem 6rem;
}

article,
aside {
  margin-bottom: 6rem;
}

aside {
  padding: 0 1rem;
}

figcaption {
  margin-bottom: 2rem;
}

/* Hero Header */
.hero {
  position: relative;
  height: 100vh;
}

.hero picture {
  height: 100%;
}

.hero img {
  height: 100%;
  object-fit: cover;
  filter: brightness(80%);
}

.hero::before {
  content: "";
  position: absolute;
  inset: 0;
  background-image: linear-gradient
    (to bottom, rgb(0 0 0 / 0%) 40%, rgb(0 0 0 / 100%));
}

.hero-text {
  position: absolute;
  color: #fff;
  text-align: center;
  padding: 0 1rem;
  display: flex;
  flex-direction: column;
  inset: 0;
  justify-content: center;
}

.hero h1 {
  color: #fff;
  font-size: clamp(4rem, 10vw + 1rem, 10rem);
  font-weight: 600;
  margin-top: 5%;
  margin-bottom: 0.5rem;
  text-shadow: 1px 1px 10px #6d7075;
}

.hero p {
  font-size: 1.5rem;
  font-weight: bold;
  text-shadow: 1px 1px 10px #000;
}

/* Cards */
.sr-only {
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(50%);
  height: 1px;
  width: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
}

.cards {
  display: flex;
  gap: 1rem;
  margin: 0 2rem;
}

.card {
  flex: 1 1 0;
  position: relative;
  gap: 1rem;
  font-size: 1.5rem;
  font-weight: 400;
  text-align: center;
  padding: 5px;
  border: 1px solid grey;
  transition: transform 300ms ease;
}

.card:hover {
  transform: scale(1.1);
}

/* Panel */
.panel {
  display: flex;
  flex-direction: column;
}

.panel .image-wrapper {
  order: -1;
}

/* Menu */
header {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

header ul {
  display: flex;
  justify-content: space-between;
  margin: 0;
  padding: 0;
  list-style-type: none;
  justify-content: space-around;
}

header nav a {
  position: relative;
  font-size: 1.5rem;
  font-weight: 500;
  text-transform: uppercase;
  margin: 0.5rem 1rem;
  padding: 1rem;
}

header nav a[href]:hover {
  color: var(--color-secondary);
  text-shadow: 1px 1px 2px #9e9e9e64;
}

header nav a[href]::after {
  content: "";
  position: absolute;
  display: block;
  inset: auto 0.5rem 0;
  height: 3px;
  background-color: var(--color-secondary);
}

header nav a[href]::after {
  transform: scaleX(0);
  transform-origin: right;
  transition: transform 300ms ease-in-out;
}

header nav a[href]:hover::after {
  transform: scaleX(1);
  transform-origin: left;
}

/* Media CSS */
@media (min-width: 480px) {
  /* mobile CSS */
  .cards {
    flex-direction: row;
    flex-wrap: wrap;
  }

  .card {
    flex: 1 1 45%;
  }

  .panel .image-wrapper {
    margin-top: 2rem;
  }
}

@media (min-width: 600px) {
  /* tablet CSS */
  .panel {
    flex-direction: row;
    align-items: center;
    gap: 1rem;
    font-size: 1.25 rem;
    height: 100vh;
  }

  .panel h2 {
    margin-top: 1rem;
    font-size: 4rem;
  }

  .panel .text-wrapper {
    flex: 1 1 40%;
  }

  .panel .image-wrapper {
    order: 0;
    flex: 1 1 60%;
  }

  .panel .left {
    order: -1;
  }
}

@media (min-width: 801px) {
  /* desktop CSS */
  .cards {
    flex-wrap: nowrap;
  }
}

